--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1111,12 +1111,12 @@ section.lazy-placeholder:after {
   color: #c1c1c1 !important;
 }
 .cid-sqqgJqFg9z {
-  background-image: url("../../../assets/images/background4.jpg");
+  background-image: url("../../../assets/images/pexels-anastasia-shuraeva-4208106.jpg");
 }
 .cid-sqqhg2RFGD {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #2e2e2e;
+  background-color: #b1a374;
 }
 .cid-sqqhg2RFGD .line {
   background-color: #ffffff;
