--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -880,7 +880,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #1f2776;
+  background-color: #b1a374;
 }
 .cid-sqqgJ132zG button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1108,7 +1108,7 @@ section.lazy-placeholder:after {
 }
 .cid-sqqgJ132zG .nav-link:hover,
 .cid-sqqgJ132zG .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #e4d295 !important;
 }
 .cid-sqqgJqFg9z {
   background-image: url("../../../assets/images/pexels-anastasia-shuraeva-4208106.jpg");
