--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap);
 
 
 
@@ -1110,8 +1110,243 @@ section.lazy-placeholder:after {
 .cid-sqqgJ132zG .dropdown-item:hover {
   color: #e4d295 !important;
 }
-.cid-sqqgJqFg9z {
-  background-image: url("../../../assets/images/pexels-anastasia-shuraeva-4208106.jpg");
+.cid-sqqrgRKhdn .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-sqqrgRKhdn .modal-body .close span {
+  font-style: normal;
+}
+.cid-sqqrgRKhdn .carousel-inner > .active,
+.cid-sqqrgRKhdn .carousel-inner > .next,
+.cid-sqqrgRKhdn .carousel-inner > .prev {
+  display: table;
+}
+.cid-sqqrgRKhdn .carousel-control .icon-next,
+.cid-sqqrgRKhdn .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.cid-sqqrgRKhdn .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-sqqrgRKhdn .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-sqqrgRKhdn .boxed-slider {
+  position: relative;
+  padding: 93px 0;
+}
+.cid-sqqrgRKhdn .boxed-slider > div {
+  position: relative;
+}
+.cid-sqqrgRKhdn .container img {
+  width: 100%;
+}
+.cid-sqqrgRKhdn .container img + .row {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.cid-sqqrgRKhdn .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-sqqrgRKhdn .mbr-table-cell {
+  padding: 0;
+}
+.cid-sqqrgRKhdn .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-sqqrgRKhdn .carousel-caption {
+  top: 50%;
+  right: 0;
+  bottom: auto;
+  left: 0;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-align-items: center;
+}
+.cid-sqqrgRKhdn .mbr-overlay {
+  z-index: 1;
+}
+.cid-sqqrgRKhdn .container-slide.container {
+  min-width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-sqqrgRKhdn .carousel-item {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -o-transition: -o-transform 0.6s ease-in-out;
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+}
+@media (max-width: 576px) {
+  .cid-sqqrgRKhdn .carousel-item .container {
+    width: 100%;
+  }
+}
+.cid-sqqrgRKhdn .carousel-item-next.carousel-item-left,
+.cid-sqqrgRKhdn .carousel-item-prev.carousel-item-right {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.cid-sqqrgRKhdn .active.carousel-item-right,
+.cid-sqqrgRKhdn .carousel-item-next {
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+}
+.cid-sqqrgRKhdn .active.carousel-item-left,
+.cid-sqqrgRKhdn .carousel-item-prev {
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+.cid-sqqrgRKhdn .mbr-slider .carousel-control {
+  top: 50%;
+  width: 70px;
+  height: 70px;
+  margin-top: -1.5rem;
+  font-size: 35px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all .3s;
+}
+.cid-sqqrgRKhdn .mbr-slider .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sqqrgRKhdn .mbr-slider .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-sqqrgRKhdn .mbr-slider .carousel-control .mbr-iconfont {
+  font-size: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-sqqrgRKhdn .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-sqqrgRKhdn .mbr-slider .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-sqqrgRKhdn .mbr-slider .carousel-indicators li {
+  max-width: 20px;
+  width: 20px;
+  height: 20px;
+  max-height: 20px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: .5;
+  transition: all .3s;
+}
+.cid-sqqrgRKhdn .mbr-slider .carousel-indicators li.active,
+.cid-sqqrgRKhdn .mbr-slider .carousel-indicators li:hover {
+  opacity: .9;
+}
+.cid-sqqrgRKhdn .mbr-slider .carousel-indicators li::after,
+.cid-sqqrgRKhdn .mbr-slider .carousel-indicators li::before {
+  content: none;
+}
+.cid-sqqrgRKhdn .mbr-slider .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 576px) {
+  .cid-sqqrgRKhdn .mbr-slider .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-sqqrgRKhdn .mbr-slider > .container img {
+  width: 100%;
+}
+.cid-sqqrgRKhdn .mbr-slider > .container img + .row {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cid-sqqrgRKhdn .mbr-slider > .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+@media (max-width: 576px) {
+  .cid-sqqrgRKhdn .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-sqqrgRKhdn .mbr-slider .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-sqqrgRKhdn .mbr-slider .mbr-table-cell {
+  padding: 0;
+}
+.cid-sqqrgRKhdn .carousel-item .container.container-slide {
+  position: initial;
+  width: auto;
+  min-height: 0;
+}
+.cid-sqqrgRKhdn .full-screen .slider-fullscreen-image {
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+.cid-sqqrgRKhdn .full-screen .slider-fullscreen-image.active {
+  display: -o-flex;
+}
+.cid-sqqrgRKhdn .full-screen .container {
+  width: auto;
+  padding-right: 0;
+  padding-left: 0;
+}
+.cid-sqqrgRKhdn .full-screen .carousel-item .container.container-slide {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-sqqrgRKhdn .full-screen .carousel-item .container.container-slide img {
+  display: none;
+}
+.cid-sqqrgRKhdn .mbr-background-video-preview {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.cid-sqqrgRKhdn .mbr-overlay ~ .container-slide {
+  z-index: auto;
 }
 .cid-sqqhg2RFGD {
   padding-top: 30px;
